--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>React Router</title>
   </head>
 
   <body>
